--- a/alembic.ini
+++ b/alembic.ini
@@ -60,7 +60,8 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://postgres:2020@localhost:5432/copy-trap
+; sqlalchemy.url = postgresql://postgres:2020@localhost:5432/copy-trap
+sqlalchemy.url = postgresql://copy_trap:n6A5KBCl2yn5KAsdCa1OBeLidIjUkZqb@dpg-colpm5i1hbls7393st2g-a.frankfurt-postgres.render.com/copy_trap
 ; driver://user:pass@localhost/dbname
 
 
